# journalctl2psql

./: CMakeLists.txt  README.md  all.pro  deb-build.pro  deb-prepare.pro  journalctl-websocket.cpp  journalctl2psql.cpp  journalctl2psql.pro  main.cpp  nxlog-udp-json2psql.cpp  nxlog-udp-json2psql.pro  version.sh
WebLogView/public/: index.html  manifest.json  mklogo.sh  worker.js
WebLogView/public/api/: data.php  db.php  dbMaintenance.php  detail.php  hosts.php  identifiers.php  setAlias.php  setTimeOffset.php  units.php
WebLogView/release/: WebLogView.tar.zst
WebLogView/src/: App.jsx  DateTimeInput.jsx  DelayedSearchInput.jsx  NumberInput.jsx  index.css  index.js
deb-build/: libs.sh  mkdeb.sh
deb-build/templates/: control
